# array-splitter

./: README.md
array-splitter/: CMakeLists.txt  README.md
array-splitter/include/: ArraySplitter.h
array-splitter/src/: ArraySplitter.cpp
array-splitter/test/: test_array_splitter.cpp
